--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module for interacting with LiteSpeed config file",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": {
     "email": "bagaswh@protonmail.com",
@@ -14,6 +14,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^16.11.6",
-    "eslint": "^8.2.0"
+    "eslint": "^8.2.0",
+    "jest": "^27.3.1"
   }
 }
